CRPC.Server/manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crpcserver
spec:
  ports:
  - port: 50000
  selector:
    app: crpcserver
